@@ -34,6 +34,19 @@ class ListView < NSTableView
     super_rightMouseDown(event)
   end
   
+  def setFont(font)
+    tableColumns.to_a.each {|i| i.dataCell.setFont(font)}
+    f = frame
+    f.height = 1e+37
+    f.height = tableColumns.to_a[0].dataCell.cellSizeForBounds(f).height.ceil
+    setRowHeight(f.height)
+    setNeedsDisplay(true)
+  end
+  
+  def font
+    tableColumns.to_a[0].dataCell.font
+  end
+  
   def keyDown(e)
     if @key_delegate
       case e.keyCode
