@@ -1,5 +1,10 @@
 2007-12-12  Satoshi Nakagawa <artension@gmail.com>
 
+	Implemented theme for the member list.
+	Changed to print operator marks and nick names separately in the member list.
+
+2007-12-12  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed to set background color for log views to stop flickering in starting up.
 
 2007-12-12  Satoshi Nakagawa <artension@gmail.com>
